--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipies</h1>
     <a href="./recipes/lasagna.html">lasagna recipe</a>
+    <a href="./recipes2/KoreanBeef.html">Korean Beef</a>
+    
 </body>
 </html>
