--- a/recipes3/index.html
+++ b/recipes3/index.html
@@ -11,7 +11,7 @@
     <h1>Turkey Spaghetti Zoodles</h1>
     <div class="firstsection">
       <img src="/food.webp" alt="food" />
-      
+
       <ul>
         <h3>Ingredients</h3>
         <li>1 teaspoon extra-virgin olive oil</li>
@@ -28,16 +28,25 @@
       </ul>
     </div>
 
+    <div class="steps">
+      <h3>Step 1</h3>
+      <p>
+        Heat olive oil in a large skillet over medium heat. Add turkey breast,
+        green pepper, garlic, Italian seasoning, ground black pepper, salt, and
+        red pepper flakes; cook and stir until turkey is lightly browned, 4 to 5
+        minutes.
+      </p>
+      <h3>Step 2</h3>
+      <p>
+        Stir marinara sauce and baby spinach into the turkey mixture; cook and
+        stir until marinara sauce is warm through, about 3 minutes.
+      </p>
+      <h3>Step 3</h3>
+      <p>
+        Stir zucchini noodles into the sauce with tongs; cook and stir until the
+        zucchini is slightly tender, 2 to 3 minutes.
+      </p>
 
-
-
-
-
-
-
-
-
-
-
+    </div>
   </body>
 </html>
