--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Odin Recipies</h1>
     <a href="./recipes/lasagna.html">lasagna recipe</a>
     <a href="./recipes2/KoreanBeef.html">Korean Beef</a>
-    
+    <a href="./recipes3/index.html"></a>
 </body>
 </html>
